@@ -1,5 +1,10 @@
 2006-10-13  Damon Chaplin  <damon@gnome.org>
 
+	* gtkdoc-scangobj.in: support interfaces on non-GObject types.
+	(#348058, Josh Parsons).
+
+2006-10-13  Damon Chaplin  <damon@gnome.org>
+
 	* gtkdoc-scangobj.in: make sure interfaces are initialized so the
 	signals query works. (#355352)
 
